<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/Newcar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="5dp"
        android:gravity="top|center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView

                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:src="@mipmap/alfaromeo"
                tools:ignore="ImageContrastCheck" />

            <Spinner
                android:id="@+id/spnAgregarMarca"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:contentDescription="@string/selectMake" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextAgregarModelo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:ems="10"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/modelo"
                android:inputType="textCapCharacters"
                android:textStyle="italic"
                tools:ignore="TextFields,RtlHardcoded" />

            <EditText

                android:id="@+id/editTextAgregarAnio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:ems="10"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/año"
                android:inputType="number"
                android:textStyle="italic"
                tools:ignore="TextFields,RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText

                android:id="@+id/editTextAgregarPatente"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:ems="10"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/patente"
                android:inputType="textCapCharacters"
                android:textStyle="italic"
                tools:ignore="TextFields,RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/km"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            tools:ignore="TextContrastCheck" />


        <LinearLayout
            android:id="@+id/linKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/NumberPicker01"
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <NumberPicker
                android:id="@+id/NumberPicker02"
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


            <NumberPicker
                android:id="@+id/NumberPicker03"
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


            <NumberPicker
                android:id="@+id/NumberPicker04"
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <NumberPicker
                android:id="@+id/NumberPicker05"
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <NumberPicker
                android:id="@+id/NumberPicker06"
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_shadow"
            android:text="@string/guardar"
            android:textColor="@color/colorthree"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>
