<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_menu"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/alfaromeo" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:gravity="center_vertical|end"
                    android:text="@string/identificador"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/underline"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtKilometros"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview"
                android:textSize="30sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnEditCar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@android:drawable/ic_menu_edit" />
        </LinearLayout>


            <LinearLayout
                android:id="@+id/linMensual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_shadow1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/gastomensual"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtGastoMensual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:text="TextView"
                    android:textSize="24sp" />
            </LinearLayout>


        <LinearLayout
            android:id="@+id/linGastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_shadow1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/proximaalerta"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtAlertaKM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Kilometros"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtFechaProximaAlerta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Fecha"
                android:textSize="18sp" />
        </LinearLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-9841764898906750/8090071538" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@android:color/holo_red_dark"
        app:fabSize="mini"
        app:srcCompat="@drawable/tool_symbol" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@android:color/holo_red_dark"
        app:fabSize="mini"
        app:srcCompat="@drawable/dollar_sign" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@android:color/holo_red_dark"
        app:fabSize="mini"
        app:srcCompat="@drawable/alarm_clock_2" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@android:color/holo_red_dark"
        app:fabSize="mini"
        app:srcCompat="@drawable/gas_station" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/plus_sign"
        app:backgroundTint="@android:color/holo_red_dark"
        app:fabSize="normal" />


</RelativeLayout>